// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YoutubeVideo component DialogVideo opens and close dialog on click 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
  <div
    aria-hidden="true"
  >
    <div
      class="YoutubeVideo-root-358"
      data-gtm="{\\"id\\":\\"test-id\\",\\"label\\":\\"test-label\\",\\"action\\":\\"Play\\"}"
      data-testid="youtube-dialog-wrapper"
    >
      <button
        aria-label="test video"
        class="YoutubeVideo-thumbnail-360"
        data-testid="thumbnail"
        type="button"
      >
        <img
          alt="test video"
          class="YoutubeVideo-previewImage-359"
          data-testid="youtube-preview-image"
          src="https://i.ytimg.com/vi/A-RfHC91Ewc/maxresdefault.jpg"
        />
        <span
          class="AlternativeContent-root-369"
        >
          test video
        </span>
        <div
          aria-disabled="false"
          aria-label="test video"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-381 iconButton IconButton-medium-387 IconButton-contained-382 YoutubeVideo-playButton-362"
          data-testid="thumbnail-button"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8 5v14l11-7z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </div>
      </button>
    </div>
  </div>
  <div
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      style="z-index: -1; position: fixed; right: 0px; bottom: 0px; top: 0px; left: 0px; background-color: rgba(0, 0, 0, 0.5);"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="ContainerDialog-root-390 ContainerDialog-bg-white-395 ContainerDialog-width-xl-401"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="ContainerDialog-header-391"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-381 iconButton IconButton-medium-387 IconButton-text-383 ContainerDialog-iconButton-392"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="ContainerDialog-content-393"
      >
        <div
          style="height: 100%; display: flex;"
        />
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`YoutubeVideo component DialogVideo opens and close dialog on click 2`] = `
<body
  style=""
>
  <div>
    <div
      class="YoutubeVideo-root-358"
      data-gtm="{\\"id\\":\\"test-id\\",\\"label\\":\\"test-label\\",\\"action\\":\\"Play\\"}"
      data-testid="youtube-dialog-wrapper"
    >
      <button
        aria-label="test video"
        class="YoutubeVideo-thumbnail-360"
        data-testid="thumbnail"
        type="button"
      >
        <img
          alt="test video"
          class="YoutubeVideo-previewImage-359"
          data-testid="youtube-preview-image"
          src="https://i.ytimg.com/vi/A-RfHC91Ewc/maxresdefault.jpg"
        />
        <span
          class="AlternativeContent-root-369"
        >
          test video
        </span>
        <div
          aria-disabled="false"
          aria-label="test video"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-381 iconButton IconButton-medium-387 IconButton-contained-382 YoutubeVideo-playButton-362"
          data-testid="thumbnail-button"
          role="button"
          tabindex="0"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M8 5v14l11-7z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </div>
      </button>
    </div>
  </div>
  <div
    aria-hidden="true"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="ContainerDialog-root-390 ContainerDialog-bg-white-395 ContainerDialog-width-xl-401"
      style="opacity: 0; webkit-transition: opacity 195ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 195ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        class="ContainerDialog-header-391"
      >
        <button
          aria-label="Close"
          class="MuiButtonBase-root MuiIconButton-root IconButton-root-381 iconButton IconButton-medium-387 IconButton-text-383 ContainerDialog-iconButton-392"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class="ContainerDialog-content-393"
      >
        <div
          style="height: 100%; display: flex;"
        />
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`YoutubeVideo component DialogVideo renders with dimensions correctly 1`] = `
<div>
  <div
    class="YoutubeVideo-root-402"
    data-gtm="{\\"id\\":\\"test-id\\",\\"label\\":\\"test-label\\",\\"action\\":\\"Play\\"}"
    data-testid="youtube-dialog-wrapper"
  >
    <button
      aria-label="test video"
      class="YoutubeVideo-thumbnail-404"
      data-testid="thumbnail"
      type="button"
    >
      <img
        alt="test video"
        class="YoutubeVideo-previewImage-403"
        data-testid="youtube-preview-image"
        src="https://i.ytimg.com/vi/A-RfHC91Ewc/maxresdefault.jpg"
      />
      <span
        class="AlternativeContent-root-413"
      >
        test video
      </span>
      <div
        aria-disabled="false"
        aria-label="test video"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root-425 iconButton IconButton-medium-431 IconButton-contained-426 YoutubeVideo-playButton-406"
        data-testid="thumbnail-button"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 5v14l11-7z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`YoutubeVideo component DialogVideo shold render ReactPlayer with currect height 1`] = `
<div>
  <div
    class="YoutubeVideo-root-490"
    data-gtm="{\\"id\\":\\"test-id\\",\\"label\\":\\"test-label\\",\\"action\\":\\"Play\\"}"
    data-testid="youtube-dialog-wrapper"
  >
    <button
      aria-label="test video"
      class="YoutubeVideo-thumbnail-492"
      data-testid="thumbnail"
      type="button"
    >
      <img
        alt="test video"
        class="YoutubeVideo-previewImage-491"
        data-testid="youtube-preview-image"
        src="https://i.ytimg.com/vi/A-RfHC91Ewc/maxresdefault.jpg"
      />
      <span
        class="AlternativeContent-root-501"
      >
        test video
      </span>
      <div
        aria-disabled="false"
        aria-label="test video"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root-513 iconButton IconButton-medium-519 IconButton-contained-514 YoutubeVideo-playButton-494"
        data-testid="thumbnail-button"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 5v14l11-7z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </button>
  </div>
</div>
`;

exports[`YoutubeVideo component DialogVideo should use fallback height if it can't get height from dimensions 1`] = `
<div>
  <div
    class="YoutubeVideo-root-446"
    data-gtm="{\\"id\\":\\"test-id\\",\\"label\\":\\"test-label\\",\\"action\\":\\"Play\\"}"
    data-testid="youtube-dialog-wrapper"
  >
    <button
      aria-label="test video"
      class="YoutubeVideo-thumbnail-448"
      data-testid="thumbnail"
      type="button"
    >
      <img
        alt="test video"
        class="YoutubeVideo-previewImage-447"
        data-testid="youtube-preview-image"
        src="https://i.ytimg.com/vi/A-RfHC91Ewc/maxresdefault.jpg"
      />
      <span
        class="AlternativeContent-root-457"
      >
        test video
      </span>
      <div
        aria-disabled="false"
        aria-label="test video"
        class="MuiButtonBase-root MuiIconButton-root IconButton-root-469 iconButton IconButton-medium-475 IconButton-contained-470 YoutubeVideo-playButton-450"
        data-testid="thumbnail-button"
        role="button"
        tabindex="0"
      >
        <span
          class="MuiIconButton-label"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8 5v14l11-7z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </div>
    </button>
  </div>
</div>
`;
